fixed the spacing of paw in buddy show page

--- a/app/assets/stylesheets/pages/_buddy-show.scss
+++ b/app/assets/stylesheets/pages/_buddy-show.scss
@@ -128,3 +128,8 @@ section img {
   }
 
 }
+
+// buddy showpage paw
+.show-buddy-links {
+  margin-top: 10px;
+}
